--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,11 @@
 .recipe {
 	background:#FFF;
-	position: absolute;
+	position: fixed;
 	top: 1em;
 	left: 1em;
 	padding: 0 0 1em 1em;
 	margin: 0 1em 0 0;
+	text-align: right;
 }
 
 .recipe img{
@@ -15,42 +16,32 @@
 .recipe h1{
 	margin: 1em;
 	text-align: right;
-	width: 50%;
-	float: right;
-}
-
-.recipe table{
-	float:right;
-	width: 59%;
 }
 
 .recipe h2{
 	margin: 0.5em;
-	width:50%;
 	text-align: right;
-	float: right;
 }
 
 .recipe p{
 	text-align: right;
 	margin: 0.25em;
-	
 }
 
 
 
 .ingredient{
-	width:33%;
-	text-align:center;
+	display: inline-flex;
+	margin: 0.5em;
 }
 
 .ingredient p{
-	text-align: center;
+	text-align: left;
+	margin: 0.5em;
 }
 
 
 .ingredient img{
-	width: 3em;
-	margin: 0.5em;
-	float: none;
+	width: 4em;
+	float: left;
 }
